Add configurable block sizes other fixes